--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.3",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
+    "node-sass-middleware": "^1.0.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
