--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "dotenv": "^16.2.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -25,6 +26,7 @@
     "node-sass-middleware": "^1.0.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0"
   }
