--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.1",
+    "kue": "^0.11.6",
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
     "multer": "^1.4.5-lts.1",
     "node-sass-middleware": "^1.0.1",
+    "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
