--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.6",
+    "cros": "^1.0.1",
     "crypto": "^1.0.1",
     "dotenv": "^16.2.0",
     "ejs": "^3.1.9",
@@ -30,6 +31,7 @@
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.7.1"
   }
 }
